--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,2 @@
-textarea{width: 100%;height: 580px;text-align: left;}
+#basic{width: 100%;height: 580px;text-align: left;}
+#popup{width: 100%;height: 100px;text-align: left;}
