--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,3 @@
-#basic{width: 100%;height: 580px;text-align: left;}
-#popup{width: 100%;height: 100px;text-align: left;}
+#template{width: 100%;height: 200px;}
+#basic{width: 100%;height: 580px;}
+#popup{width: 100%;height: 100px;}
