--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,17 @@ footer {
     width: 100%;
 }
 
-#template{width: 100%;height: 200px;}
-#basic{width: 100%;height: 580px;}
-#popup{width: 100%;height: 100px;}
+#template {
+    width: 100%;
+    height: 200px;
+}
+
+#basic {
+    width: 100%;
+    height: 580px;
+}
+
+#popup {
+    width: 100%;
+    height: 100px;
+}
